# addon-rss-log-feed

./: .pre-commit-config.yaml  pyproject.toml  repository.yaml  sonar-project.properties
.github/workflows/: create_new_release.yml  delete_pr_branch.yml  draft_release.yaml  manage_pr_labels.yml  publish_release.yml
rss_log_feed/: Dockerfile  config.yaml  docker-compose.yml  run.sh
rss_log_feed/src/: main.py  requirements.txt
